Changed path again

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "server:dev": "cd server && npm run start:dev",
         "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
         "start:dev": "concurrently --kill-others \"npm run server:dev\" \"npm run client\"",
-        "postinstall": "(cd client && npm install && npm run build) && (cd ../server && npm install)"
+        "postinstall": "(cd client && npm install && npm run build); (cd server && npm install)"
     },
     "keywords": [],
     "author": "",
