--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,7 +8,7 @@
     "ecmaVersion": "latest"
   },
   "extends": ["airbnb", "prettier", "plugin:node/recommended"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "eslint-plugin-prettier"],
   "rules": {
     "prettier/prettier": "error",
     "spaced-comment": "off",
